--- a/explorexp/templates/add_place.html
+++ b/explorexp/templates/add_place.html
@@ -113,6 +113,8 @@ function displayPlaceName(location) {
 <style>
     body {
         font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+
+        margin: 0;
     }
     #map {
         height: 500px;
@@ -138,6 +140,7 @@ function displayPlaceName(location) {
   min-height: 40px;
   min-width: 0;
   outline: none;
+        margin-top: 20px;
   padding: 16px 24px;
   text-align: center;
   text-decoration: none;
@@ -145,7 +148,7 @@ function displayPlaceName(location) {
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 11%;
+  width: 13%;
   will-change: transform;
     }
 
@@ -199,7 +202,7 @@ function displayPlaceName(location) {
         margin-top: 28px;
 }
 </style>
-
+<div class="container">
 <div class="linkholder">
     <div class="mapholder">
         <div id="map"></div>
@@ -210,11 +213,11 @@ function displayPlaceName(location) {
 <form method="post">
     {% csrf_token %}
     <div style="display: flex;">
-        <div style="flex-grow: 1; margin-right: 10px;">
+        <div style="flex-grow: 1; margin-right: 40px;">
             <label for="id_name" style="font-size: larger">Name:</label>
             <input type="text" id="id_name" name="name" required>
         </div>
-        <div style="flex-grow: 1; margin-left: 10px;">
+        <div style="flex-grow: 1; margin-left: 40px;">
             <select id="id_type" name="type" required>
                 <option value="" disabled selected>Select a type</option>
                 <!-- Add your options here -->
@@ -227,7 +230,7 @@ function displayPlaceName(location) {
         <button class="btn-sub" type="submit">Submit Place</button>
     </div>
 </form>
-
+</div>
 
     <script>
 
