--- a/explorexp/templates/profile.html
+++ b/explorexp/templates/profile.html
@@ -6,7 +6,7 @@
     <title>Profile</title>
     <style>
         body {
-            margin-top: 0;
+            margin: 0;
             font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
         }
         .badge-container {
@@ -41,6 +41,7 @@
     </style>
 </head>
 <body>
+<div class="container">
     <h1 style="color:black; text-align: center">Welcome {{ USER_PROFILE }}</h1>
     <h2>Badges:</h2>
     <ul class="badge-container">
@@ -60,6 +61,7 @@
             {% endfor %}
         </ul>
     </div>
+</div>
 
 </body>
 </html>
