--- a/explorexp/templates/leaderboard.html
+++ b/explorexp/templates/leaderboard.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <title>ExploreXP Leaderboard</title>
 </head>
+<style>
+    body {
+        font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+        margin: 0;
+    }
+</style>
 <body>
-  <ul>
-    {% for obj in USERS_ORDER %}
-      <li>{{ obj.username }}</li>
-    {% endfor %}
-  </ul>
+<div class="container">
+    <h1 style="color: #1a1a1a" >Leaderboard</h1>
+    <ol>
+        {% for user in users %}
+            <li>{{ user.username }} - {{ user.total_points }} XP</li>
+        {% endfor %}
+    </ol>
+</div>
 </body>
 </html>
