--- a/explorexp/templates/leaderboard.html
+++ b/explorexp/templates/leaderboard.html
@@ -10,9 +10,14 @@
         font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
         margin: 0;
     }
+    .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
 </style>
 <body>
-<div class="container">
+<div style="align-content: center;" class="container">
     <h1 style="color: #1a1a1a" >Leaderboard</h1>
     <ol>
         {% for user in users %}
